// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`access private route as public user 1`] = `
<div
  className="Login"
>
  <Grid
    textAlign="center"
  >
    <div
      className="ui center aligned grid"
    >
      <GridColumn
        className="Form"
      >
        <div
          className="column Form"
        >
          <Header
            as="h2"
            color="teal"
            textAlign="center"
          >
            <h2
              className="ui teal center aligned header"
            >
              Login
            </h2>
          </Header>
          <Form
            as="form"
            size="large"
          >
            <form
              className="ui large form"
              onSubmit={[Function]}
            >
              <Segment
                stacked={true}
              >
                <div
                  className="ui stacked segment"
                >
                  <FormInput
                    as={[Function]}
                    control={[Function]}
                    fluid={true}
                    icon="user"
                    iconPosition="left"
                    id="username"
                    onChange={[Function]}
                    placeholder="Username"
                    value=""
                  >
                    <FormField
                      control={[Function]}
                      fluid={true}
                      icon="user"
                      iconPosition="left"
                      id="username"
                      onChange={[Function]}
                      placeholder="Username"
                      value=""
                    >
                      <div
                        className="field"
                      >
                        <Input
                          fluid={true}
                          icon="user"
                          iconPosition="left"
                          id="username"
                          onChange={[Function]}
                          placeholder="Username"
                          type="text"
                          value=""
                        >
                          <div
                            className="ui fluid left icon input"
                          >
                            <input
                              id="username"
                              key="text"
                              onChange={[Function]}
                              placeholder="Username"
                              type="text"
                              value=""
                            />
                            <Icon
                              as="i"
                              key="user"
                              name="user"
                            >
                              <i
                                aria-hidden="true"
                                className="user icon"
                              />
                            </Icon>
                          </div>
                        </Input>
                      </div>
                    </FormField>
                  </FormInput>
                  <FormInput
                    as={[Function]}
                    control={[Function]}
                    fluid={true}
                    icon="lock"
                    iconPosition="left"
                    id="password"
                    onChange={[Function]}
                    placeholder="Password"
                    type="password"
                    value=""
                  >
                    <FormField
                      control={[Function]}
                      fluid={true}
                      icon="lock"
                      iconPosition="left"
                      id="password"
                      onChange={[Function]}
                      placeholder="Password"
                      type="password"
                      value=""
                    >
                      <div
                        className="field"
                      >
                        <Input
                          fluid={true}
                          icon="lock"
                          iconPosition="left"
                          id="password"
                          onChange={[Function]}
                          placeholder="Password"
                          type="password"
                          value=""
                        >
                          <div
                            className="ui fluid left icon input"
                          >
                            <input
                              id="password"
                              key="password"
                              onChange={[Function]}
                              placeholder="Password"
                              type="password"
                              value=""
                            />
                            <Icon
                              as="i"
                              key="lock"
                              name="lock"
                            >
                              <i
                                aria-hidden="true"
                                className="lock icon"
                              />
                            </Icon>
                          </div>
                        </Input>
                      </div>
                    </FormField>
                  </FormInput>
                  <Button
                    as="button"
                    color="blue"
                    fluid={true}
                    loading={false}
                    onClick={[Function]}
                    size="large"
                  >
                    <button
                      className="ui blue large fluid button"
                      onClick={[Function]}
                      role="button"
                    >
                      Login
                    </button>
                  </Button>
                </div>
              </Segment>
            </form>
          </Form>
        </div>
      </GridColumn>
    </div>
  </Grid>
</div>
`;

exports[`access public route as authenticated user 1`] = `
<div
  className="Browse"
>
  <CardGroup
    doubling={true}
    itemsPerRow={4}
  >
    <div
      className="ui doubling four cards"
    />
  </CardGroup>
</div>
`;

exports[`display private navigation 1`] = `
Array [
  <div
    className="header item"
    onClick={[Function]}
>
    Mince Pie Challenge
</div>,
  <a
    className="item"
    onClick={[Function]}
    to="/add"
>
    <Icon
        as="i"
        name="add"
    >
        <i
            aria-hidden="true"
            className="add icon"
        />
    </Icon>
     Add
</a>,
  <a
    className="item"
    onClick={[Function]}
>
    <Icon
        as="i"
        name="unlock alternate"
    >
        <i
            aria-hidden="true"
            className="unlock alternate icon"
        />
    </Icon>
     Logout
</a>,
]
`;

exports[`display public navigation 1`] = `
Array [
  <div
    className="header item"
    onClick={[Function]}
>
    Mince Pie Challenge
</div>,
  <a
    className="item"
    onClick={[Function]}
    to="/register"
>
    <Icon
        as="i"
        name="pencil"
    >
        <i
            aria-hidden="true"
            className="pencil icon"
        />
    </Icon>
     Register
</a>,
  <a
    className="item"
    onClick={[Function]}
    to="/login"
>
    <Icon
        as="i"
        name="lock"
    >
        <i
            aria-hidden="true"
            className="lock icon"
        />
    </Icon>
     Login
</a>,
]
`;

exports[`login as user 1`] = `
<div
  className="Browse"
>
  <CardGroup
    doubling={true}
    itemsPerRow={4}
  >
    <div
      className="ui doubling four cards"
    />
  </CardGroup>
</div>
`;
